# cs

./: .dockerignore  .env.example  .gitignore  Dockerfile  RUN.md  docker-compose.yml  mcp-config.json  pyproject.toml  tmp_pdf_llm_check.py
apps/daily_agent/: pyproject.toml  tmp_summary_check.py
apps/daily_agent/app/: cli.py  main.py
apps/daily_agent/app/agent/: graph.py  state.py
apps/daily_agent/app/agent/nodes/: analyze_risks.py  build_plan.py  compose_report.py  fetch_news.py  fetch_prices.py  fetch_resources.py  final_verify.py  normalize.py  parse_query.py  resolve_entity.py  verify_evidence.py
apps/daily_agent/app/api/: routes.py  schemas.py
apps/daily_agent/app/mcp_client/: manager.py
apps/daily_agent/app/reports/: renderer.py
apps/daily_agent/app/reports/templates/: daily_brief.md.j2
apps/daily_agent/app/verification/: citations.py  claims.py  numbers.py
config/: commodity_mapping.yaml  project_registry.yaml  risk_rules.yaml  sources.yaml
data/fixtures/: news.json  prices.csv  resources.json
docs/: architecture.md
mcp_servers/lme_price/: pyproject.toml
mcp_servers/lme_price/app/: server.py
mcp_servers/lme_price/app/providers/: __init__.py  (+4 more)
mcp_servers/mineral_pdf/: pyproject.toml
mcp_servers/mineral_pdf/app/: server.py
mcp_servers/mineral_pdf/app/providers/: fixture.py  llm_structurer.py  pdf_extractor.py
mcp_servers/mining_news/: pyproject.toml
mcp_servers/mining_news/app/: server.py
mcp_servers/mining_news/app/providers/: article.py  fixture.py  rss.py
scripts/: seed_demo_data.py  smoke_test.py  test_single_server.py
