[project]
name = "daily-agent"
version = "0.1.0"
description = "Mining daily brief agent with LangGraph orchestration"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "mcp[cli]>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "openai>=1.0",
]
