[project]
name = "mineral-pdf-mcp"
version = "0.1.0"
description = "MCP server for extracting mineral resource data from PDF reports"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
    "openai>=1.0",
]
